--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -9,14 +9,14 @@
   font-family: SanFrancisco Pro;
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/SFPro/SFProDisplay-Medium.ttf") format("truetype");
+  src: url("../fonts/SFPro/SFProDisplay-Regular.ttf") format("truetype");
 }
 
 @font-face {
   font-family: SanFrancisco Pro;
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/SFPro/SFProDisplay-Regular.ttf") format("truetype");
+  src: url("../fonts/SFPro/SFProDisplay-Medium.ttf") format("truetype");
 }
 
 @font-face {
@@ -24,4 +24,39 @@
   font-style: normal;
   font-weight: 900;
   src: url("../fonts/SFPro/SFProDisplay-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: PFDinTextPro;
+  font-style: normal;
+  font-weight: 200;
+  src: url("../fonts/PFDPro/PFDinTextPro-XThin.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: PFDinTextPro;
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/PFDPro/PFDinTextPro-Thin.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: PFDinTextPro;
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/PFDPro/PFDinTextPro-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: PFDinTextPro;
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/PFDPro/PFDinTextPro-Medium.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: PFDinTextPro;
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/PFDPro/PFDinTextPro-Bold.ttf") format("truetype");
 }
