--- a/src/components/ScreenWrapper/screenWrapper.scss
+++ b/src/components/ScreenWrapper/screenWrapper.scss
@@ -1,9 +1,6 @@
+@import "../../assets/scss/mixin";
 .screen-wrapper {
-  width: 50vh;
-  height: 80vh;
-  min-width: 290px;
-  min-height: 460px;
-  padding: 30px;
+  @include screen-size;
   border-radius: 30px;
   position: absolute;
   top: 50%;
@@ -16,7 +13,6 @@
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  z-index: 2;
   top: 110px;
   right: 50px;
 }
