--- a/src/containers/SearchScreen/searchScreen.scss
+++ b/src/containers/SearchScreen/searchScreen.scss
@@ -11,7 +11,7 @@
   .search-field {
     width: 100%;
     height: 40px;
-    padding: 10px 20px;
+    padding: 0 20px;
     border-radius: 30px;
     border: 1px solid $white;
     background-color: transparent;
@@ -19,5 +19,9 @@
     outline: none;
     font-size: 16px;
     font-weight: 300;
+    &::placeholder {
+      color: $white;
+      opacity: 1;
+    }
   }
 }
