--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -20,17 +20,21 @@
   display: flex;
   flex-direction: column;
   z-index: 5;
+    &:before {
+      position: absolute;
+      width: 600px;
+      height: 900px;
+      top: -25px;
+      left: -50px;
+      content: '';
+      background-size: 100%;
+      filter: blur(30px);
+      z-index: 3;
+    }
 }
-
-.blur-background:before {
-  position: absolute;
-  width: 600px;
-  height: 900px;
-  top: -25px;
-  left: -50px;
-  content: '';
-  background: url("../../assets/images/screen/screen-background-day-2.png") center no-repeat;
-  background-size: 100%;
-  filter: blur(30px);
-  z-index: 3;
+.blur-background-day:before {
+     background: url("../../assets/images/screen/screen-background-day-2.png") center no-repeat;
+}
+.blur-background-night:before {
+  background: url("../../assets/images/screen/screen-background-night-2.png") center no-repeat;
 }
