--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -38,3 +38,11 @@
 .blur-background-night:before {
   background: url("../../assets/images/screen/screen-background-night-2.png") center no-repeat;
 }
+
+.eagle {
+  width: 80px;
+  position: absolute;
+  top: 80px;
+  right: -100px;
+  z-index: 1;
+}
