--- a/src/components/hill/hill.scss
+++ b/src/components/hill/hill.scss
@@ -1,11 +1,8 @@
-.background-hill {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  img {
+
+.background-hill-img {
     width: 40vw;
     bottom: 0;
     position: absolute;
   }
-}
+
 
